Beta 0.11.0 Eliminando tinyMce y probando con CKEditor. Se agrega ini

--- a/templates/inicio/edit.html.twig
+++ b/templates/inicio/edit.html.twig
@@ -11,3 +11,8 @@
 
     {{ include('inicio/_delete_form.html.twig') }}
 {% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    {% include '_bases/_editor.html.twig' %}
+
+{% endblock %}
