--- a/templates/inicio/new.html.twig
+++ b/templates/inicio/new.html.twig
@@ -12,6 +12,6 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('../bundles/tinymce/ext/tinymce/tinymce.min.js') }}"></script>
-    <script src="{{ asset('../bundles/tinymce/ext/tinymce-webcomponent.js') }}" type="module"></script>
+{% include '_bases/_editor.html.twig' %}
+
 {% endblock %}
