--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -7,5 +7,7 @@
 {% endblock %}
 
 {% block javascripts %}
+  {# Carga del editor local para que esté disponible en las vistas Vue #}
+  {% include '_bases/_editor.html.twig' %}
   {{ vite_entry_script_tags('admin') }}
 {% endblock %}
