--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Ingresar - FORMA{% endblock %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  {{ vite_entry_link_tags('login') }}
+{% endblock %}
+
 {% block body %}
   <div id="app"></div>
 {% endblock %}
