--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Admin - FORMA{% endblock %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  {{ vite_entry_link_tags('admin') }}
+{% endblock %}
+
 {% block body %}
   <div id="app"></div>
 {% endblock %}
